# jsm22_pp

./: .RData  .README.md.swp  .Rhistory  .gitignore  CITATION.cff  Makefile  README.md  abstract.txt  mcmc_time_taken.txt  messages_2022-03-08.23-52-30  samples_2022-03-08.23-52-30  swarm_prior.txt
R/: create_configs.R  prices_to_returns.R  run_conditional_likes.R  run_lw_posterior_samples.R  run_mcmc.R  run_state_ests.R  update_csv.R  vis_conditional_likes.R  vis_mcmc_samps.R  vis_state_ests.R
configs/: config1.csv  config2.csv  config3.csv  config4.csv  config5.csv  config6.csv
cpp/: .main.cpp.swp  CMakeLists.txt  build_all_cpp.sh  main.cpp  svol_leverage_mod.h
cpp/include/: config_file_readers.h  data_reader.h  estimate_univ_svol.h  forecasting_algos.h  svol_leverage_mod.h
data/: .Rhistory  SPY.csv  SPY.csv.bck  SPY_returns.csv  SPY_returns_estimation.csv  mcmc_numerical_diagnostics.txt  mcmc_time_taken.txt  param_samples.csv  param_samples.csv.bck
data/posterior_samps/: lw2_prior_posterior.txt  lw_aux_posterior.txt  mcmc_numerical_diagnostics.txt  mcmc_time_taken.txt  param_samples.csv  param_samples.csv.bck
estimation/: CMakeLists.txt  README.md  build_all_cpp.sh  build_and_run.sh  estimate_univ_svol.h  main.cpp  messages_2022-01-31.17-32-12  samps_2022-01-31.17-32-12  svol_leverage_mod.h
file_dep_vis/: gen_img.sh  graph.dot
forecasting/: build_all_cpp.sh  config_file_readers.cpp  config_file_readers.h  forecasting_algos.h  main.cpp  svol_mods.h
shared_cpp/: svol_leverage_mod.h
writeup/: abstract.txt  notes.Rmd  our_model.Rmd  thoughts.txt
(+11 files in other folders)
